tests/type-checking/base-rules/var_def/global_var_def_bool_int_fail.xdsl
// RUN: choco-opt -p check-assign-target,name-analysis,type-checking %s | filecheck %s

// 
// a: bool = 2
//

builtin.module() {
  choco.ast.program() {
    choco.ast.var_def() {
      choco.ast.typed_var() ["var_name" = "a"] {
        choco.ast.type_name() ["type_name" = "bool"]
      }
    } {
      choco.ast.literal() ["value" = 2 : !i32]
    }
  } {}
}
// CHECK: Semantic error:
